case study card image alignment fixed

--- a/components/CaseStudyCard/CaseStudyCard.module.css
+++ b/components/CaseStudyCard/CaseStudyCard.module.css
@@ -43,7 +43,7 @@
 .cardInnerSection {
 	grid-row: 2 / 3;
 	grid-column: 1 / 2;
-	padding: 0.25rem;
+	padding: 0 0.25rem 0.25rem 0.25rem;
 	justify-self: start;
 	align-self: end;
 	z-index: 2;
@@ -117,6 +117,7 @@
 	}
 
 	.cardImgSection {
+		grid-row: 1 / 2;
 		margin: 1.5rem;
 	}
 
